--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gatsby": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@iconify/react": "^3.1.2"
   }
 }
